# ohcbor

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
crates/ohcbor/: Cargo.toml
crates/ohcbor/src/: bstring.rs  buf.rs  de.rs  error.rs  lib.rs  read.rs  simple.rs  tag.rs  write.rs
crates/ohcbor/src/decode/: decoders.rs  impls.rs  mod.rs  seed.rs  size_hint.rs  value.rs
crates/ohcbor/src/encode/: encoders.rs  fmt.rs  impls.rs  impossible.rs  mod.rs
crates/ohcbor/src/value/: dec.rs  enc.rs  index.rs  mod.rs
xtask/: .gitignore  Cargo.toml
xtask/src/: main.rs
