[package]
name = "xtask"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rayon.workspace = true
strum.workspace = true
strum_macros.workspace = true
syn.workspace = true
xshell.workspace = true

[lints]
workspace = true
