[package]
name = "ohcbor"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
hex-literal.workspace = true
serde_derive.workspace = true
serde_bytes.workspace = true

[lints]
workspace = true

[features]
default = ["std"]

std = ["serde/std"]

alloc = ["serde/alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
