[package]
name = "ohcbor"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
hex-literal.workspace = true
proptest.workspace = true

[lints]
workspace = true

[features]
default = ["std"]

std = []

alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
